fixed userdetails overflow

--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,8 @@
         font-size: 18px;
     }
     .userdetails {
-        font-size:20px;
+        font-size:15px;
+        line-height: 5rem;
     }
     
 }
